--- a/p5-JS/panda.html
+++ b/p5-JS/panda.html
@@ -3,7 +3,7 @@ Author : Sayantan Pal
 
 Date : 27.01.2019
 
-Credits : Daniel Shiffman , follow his youtube --  https://www.youtube.com/user/shiffman
+Credits : Daniel Shiffman , follow his youtube :  https://www.youtube.com/user/shiffman
 
 
 // CODE :Panda_face
